src/test/deca/context/valid/provided/ContextSansObjet/IdentificationSansAffectation.deca
//Description:
//  Déclaration de variables de tout type sans affectation
//
//Résultat:
// ok

{
    int x;
    float y;
    string s;
    boolean a;
}
