src/test/deca/context/invalid/provided/ContextSansObjet/OperationsBooleennes/Eq_String.deca
//Description:
//  Vérification contextuelle du type de sortie de == différent de string.
//
//Résultat:
//  Erreur contextuelle
//  ligne 8 : type incompatible
{
    string x = 1==1;
}